Add blurb on Cohere integr, fix API key placeholder

--- a/notebooks/search/10-semantic-reranking.ipynb
+++ b/notebooks/search/10-semantic-reranking.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/10-semantic-reranking.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
-    "This example will show how to combine search and [semantic reranking](https://www.elastic.co/guide/en/elasticsearch/reference/current/semantic-reranking.html) to improve the accuracy of your search results."
+    "This example will show how to combine search and [semantic reranking](https://www.elastic.co/guide/en/elasticsearch/reference/current/semantic-reranking.html) to improve the accuracy of your search results. We'll be using the [rerank feature from Cohere](https://cohere.com/rerank).\n",
+    "\n",
+    "Note: for a complete integration with Cohere please refer to [this notebook](https://github.com/elastic/elasticsearch-labs/blob/main/notebooks/integrations/cohere/cohere-elasticsearch.ipynb). This example focuses on Cohere reranking only through an Elastic [retriever](https://www.elastic.co/guide/en/elasticsearch/reference/current/retrievers-overview.html) query."
    ]
   },
   {
@@ -258,7 +260,7 @@
     "        model_config={\n",
     "            \"service\": \"cohere\",\n",
     "            \"service_settings\": {\n",
-    "                \"api_key\": \"kiOfsXJV2kMQ46xzve6snydXhKtfnfLI8pCgCdm0\",\n",
+    "                \"api_key\": COHERE_API_KEY,\n",
     "                \"model_id\": \"rerank-english-v3.0\",\n",
     "            },\n",
     "        },\n",
