Replace notebook with updated version using cohere rerank retriever
# Conflicts:
#	notebooks/integrations/hugging-face/huggingface-integration-millions-of-documents-with-cohere-reranking.ipynb

--- a/notebooks/integrations/hugging-face/huggingface-integration-millions-of-documents-with-cohere-reranking.ipynb
+++ b/notebooks/integrations/hugging-face/huggingface-integration-millions-of-documents-with-cohere-reranking.ipynb
@@ -271,7 +271,7 @@
     "        \"service\": \"hugging_face\",\n",
     "        \"service_settings\": {\n",
     "            \"api_key\": API_KEY,\n",
-    "            \"url\": \"https://yb0j0ol2xzvro0oc.us-east-1.aws.endpoints.huggingface.cloud\",\n",
+    "            \"url\": \"<URL>\",\n",
     "            \"similarity\": \"dot_product\",\n",
     "        },\n",
     "    },\n",
@@ -814,7 +814,7 @@
     "    body={\n",
     "        \"service\": \"cohere\",\n",
     "        \"service_settings\": {\n",
-    "            \"api_key\": \"h2OzeuORCdvJ8eidGYbHmjfeWcecRQN8MYGDHxK1\",\n",
+    "            \"api_key\": \"<COHERE-API-KEY>\",\n",
     "            \"model_id\": \"rerank-english-v3.0\",\n",
     "        },\n",
     "        \"task_settings\": {\"top_n\": 100, \"return_documents\": True},\n",
