Change title and filename

--- a/notebooks/search/10-semantic-reranking-retriever-cohere.ipynb
+++ b/notebooks/search/10-semantic-reranking-retriever-cohere.ipynb
@@ -163,7 +163,7 @@
     "!curl -O -s https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/telemetry/telemetry.py\n",
     "from telemetry import enable_telemetry\n",
     "\n",
-    "client = enable_telemetry(client, \"10-semantic-reranking\")"
+    "client = enable_telemetry(client, \"10-semantic-reranking-retriever-cohere\")"
    ]
   },
   {
