Use env variables

--- a/notebooks/search/11-semantic-reranking-hugging-face.ipynb
+++ b/notebooks/search/11-semantic-reranking-hugging-face.ipynb
@@ -22,6 +22,9 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "-tir9w4Sz80v"
+   },
    "source": [
     "## 🧰 Requirements\n",
     "\n",
@@ -32,10 +35,7 @@
     "    - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "      - You can also use Elastic Cloud [Serverless](https://cloud.elastic.co/serverless-registration)\n",
     "- Elasticsearch 8.15.0 or above (for non-serverless deployments)"
-   ],
-   "metadata": {
-    "id": "-tir9w4Sz80v"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,8 +58,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/480.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.2/480.2 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m \u001b[32m471.0/480.2 kB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m480.2/480.2 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/64.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.4/64.4 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -281,21 +281,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "rL5AEaDrzj9t"
+   },
    "source": [
     "## Test connection\n",
     "\n",
     "Confirm that the Python client has connected to your Elasticsearch instance with this test.\n",
     "\n"
-   ],
-   "metadata": {
-    "id": "rL5AEaDrzj9t"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "print(client.info())"
-   ],
+   "execution_count": 70,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -303,41 +301,43 @@
     "id": "t_lhez7Tznhp",
     "outputId": "6ab9d02e-5cd1-4d6c-8bb2-958f78ab43e0"
    },
-   "execution_count": 70,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "{'name': 'serverless', 'cluster_name': 'dbed854f18874014ad9ca1b1169e9e3d', 'cluster_uuid': 't3JzgD0aSeesEYPWch7KUg', 'version': {'number': '8.11.0', 'build_flavor': 'serverless', 'build_type': 'docker', 'build_hash': '00000000', 'build_date': '2023-10-31', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '8.11.0', 'minimum_index_compatibility_version': '8.11.0'}, 'tagline': 'You Know, for Search'}\n"
      ]
     }
+   ],
+   "source": [
+    "print(client.info())"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "0Lt2KpOizHLe"
+   },
    "source": [
     "## Enable Telemetry\n",
     "\n",
     "Knowing that you are using this notebook helps us decide where to invest our efforts to improve our products. We would like to ask you that you run the following code to let us gather anonymous usage statistics. See telemetry.py for details. Thank you!"
-   ],
-   "metadata": {
-    "id": "0Lt2KpOizHLe"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "08qJdCH3zNSC"
+   },
+   "outputs": [],
    "source": [
     "!curl -O -s https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/telemetry/telemetry.py\n",
     "from telemetry import enable_telemetry\n",
     "\n",
     "es_client = enable_telemetry(es_client, \"11-semantic-reranking-hugging-face\")"
-   ],
-   "metadata": {
-    "id": "08qJdCH3zNSC"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,8 +362,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Done indexing documents into `movies` index!\n"
      ]
@@ -421,8 +421,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2024-08-13 06:47:43,002 INFO : Establishing connection to Elasticsearch\n",
       "2024-08-13 06:47:43,550 INFO : Connected to serverless cluster 'dbed854f18874014ad9ca1b1169e9e3d'\n",
@@ -462,8 +462,8 @@
    ],
    "source": [
     "!eland_import_hub_model \\\n",
-    "  --cloud-id tue-aug-6:dXMtd2VzdC0yLmF3cy5lbGFzdGljLmNsb3VkJGRiZWQ4NTRmMTg4NzQwMTRhZDljYTFiMTE2OWU5ZTNkLmVzJGRiZWQ4NTRmMTg4NzQwMTRhZDljYTFiMTE2OWU5ZTNkLmti \\\n",
-    "  --es-api-key YUxEYVJwRUJaVS00dUE3WTNGRDE6ZUwzVnBqYTJSNU9Cc0JFMkRCTkJQUQ== \\\n",
+    "  --cloud-id $CLOUD_ID \\\n",
+    "  --es-api-key $ES_API_KEY \\\n",
     "  --hub-model-id cross-encoder/ms-marco-MiniLM-L-6-v2 \\\n",
     "  --task-type text_similarity \\\n",
     "  --clear-previous \\\n",
@@ -472,6 +472,9 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "pDAB9pX3VGKE"
+   },
    "source": [
     "## Lexical queries\n",
     "\n",
@@ -482,13 +485,27 @@
     "Let's say we vaguely remember that there is a famous movie about a killer who eats his victims. For the sake of argument, pretend we've momentarily forgotten the word \"cannibal\".\n",
     "\n",
     "Let's perform a [`query_string` query](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-query-string-query.html) to find the phrase \"flesh-eating bad guy\" in the `plot` fields of our Elasticsearch documents."
-   ],
-   "metadata": {
-    "id": "pDAB9pX3VGKE"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "EAG0yZ_bVX-j",
+    "outputId": "61c61ecf-c731-4ace-b52d-5fbdc357a63b"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No search results found\n"
+     ]
+    }
+   ],
    "source": [
     "resp = client.search(\n",
     "    index=\"movies\",\n",
@@ -511,23 +528,6 @@
     "        print(f\"Title: {title}\\nPlot: {plot}\\n\")\n",
     "else:\n",
     "    print(\"No search results found\")"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "EAG0yZ_bVX-j",
-    "outputId": "61c61ecf-c731-4ace-b52d-5fbdc357a63b"
-   },
-   "execution_count": 44,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "No search results found\n"
-     ]
-    }
    ]
   },
   {
@@ -555,8 +555,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Title: The Godfather\n",
       "Plot: An organized crime dynasty's aging patriarch transfers control of his clandestine empire to his reluctant son.\n",
@@ -603,14 +603,14 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "2K1C_Pmzmrxw"
+   },
    "source": [
     "That's better! At least we've got some results now. We broadened our search criteria to increase the chances of finding relevant results.\n",
     "\n",
     "But these results aren't very precise in the context of our original query \"flesh-eating bad guy\". We can see that \"The Silence of the Lambs\" is returned in the middle of the results set with this generic `match` query. Let's see if we can use our semantic reranking model to get closer to the searcher's original intent."
-   ],
-   "metadata": {
-    "id": "2K1C_Pmzmrxw"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -627,16 +627,16 @@
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
-    "id": "Z9DegKqb2EYV",
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "id": "Z9DegKqb2EYV",
     "outputId": "cd84f1a5-6e07-4f61-eab2-aa4383d00b8b"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Title: The Silence of the Lambs\n",
       "Plot: A young F.B.I. cadet must receive the help of an incarcerated and manipulative cannibal killer to help catch another serial killer, a madman who skins his victims.\n",
@@ -703,6 +703,9 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "6yYfJjjstxwK"
+   },
    "source": [
     "## Learn more\n",
     "\n",
@@ -710,22 +713,19 @@
     "- [`text_similarity_reranker` retriever ](https://www.elastic.co/guide/en/elasticsearch/reference/current/retriever.html#text-similarity-reranker-retriever). Detailed API syntax reference with examples.\n",
     "- [Semantic reranking with Cohere notebook](https://github.com/elastic/elasticsearch-labs/blob/main/notebooks/search/10-semantic-reranking-retriever-cohere.ipynb). You can also use the Cohere Rerank API instead of loading your own model into Elasticsearch.\n",
     "- [`elasticsearch-labs` notebooks](https://github.com/elastic/elasticsearch-labs/tree/main/notebooks). Check our full catalogue of Python notebooks."
-   ],
-   "metadata": {
-    "id": "6yYfJjjstxwK"
-   }
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
-  },
   "colab": {
    "provenance": []
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
