--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -22,7 +22,7 @@
     "- Evaluate the impact of the LTR model on search relevance, by comparing search results before and after applying the model.\n",
     "\n",
     "> **NOTE:**\n",
-    "> - Learning To Rank is generally available for Elastic Stack versions 8.15.0 and newer and requires an Enterprise subscription or higher.\n",
+    "> - Learning To Rank is generally available for Elastic Stack versions 8.15.0 and newer and requires an Enterprise subscription or higher.\n"
    ]
   },
   {
