Updating the LTR notebook (#315)

--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -22,8 +22,7 @@
     "- Evaluate the impact of the LTR model on search relevance, by comparing search results before and after applying the model.\n",
     "\n",
     "> **NOTE:**\n",
-    "> - Learning To Rank is available for Elastic Stack versions 8.12.0 and newer and requires a Platinum subscription or higher.\n",
-    "> - Learning To Rank is experimental and may be changed or removed completely in future releases. Elastic will make a best effort to fix any issues, but experimental features are not supported to the same level as generally available (GA) features.\n"
+    "> - Learning To Rank is generally available for Elastic Stack versions 8.15.0 and newer and requires an Enterprise subscription or higher.\n"
    ]
   },
   {
