--- a/supporting-blog-content/utilizing-phi3-models/utilizing_phi3_models.ipynb
+++ b/supporting-blog-content/utilizing-phi3-models/utilizing_phi3_models.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -46,8 +32,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting elasticsearch==8.14\n",
             "  Downloading elasticsearch-8.14.0-py3-none-any.whl (480 kB)\n",
@@ -89,10 +75,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "FOWmTbENPTci",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "FOWmTbENPTci",
         "outputId": "5f4d9844-36be-49b3-befb-ea9e31cac3cb"
       },
       "outputs": [
@@ -159,8 +145,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Embedding endpoint created successfully.\n"
           ]
@@ -212,9 +198,9 @@
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "NameError",
           "evalue": "name 'AZURE_API_KEY' is not defined",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -356,8 +342,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Data indexed successfully.\n"
           ]
@@ -389,51 +375,29 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "8cR-wbkthqv7"
+      },
       "source": [
         "### Retrieving relevant dishes\n",
         "\n",
         "We use a semantic query to retrieve the most relevant dishes based on the customer request."
-      ],
-      "metadata": {
-        "id": "8cR-wbkthqv7"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "try:\n",
-        "    response = es_client.search(\n",
-        "        index=\"lasticco-menu\",\n",
-        "        body={\n",
-        "            \"query\": {\n",
-        "                \"semantic\": {\n",
-        "                    \"field\": \"description\",\n",
-        "                    \"query\": \"may I have a carbonara with cream and bacon?\",\n",
-        "                }\n",
-        "            },\n",
-        "        },\n",
-        "    )\n",
-        "    dishes = []\n",
-        "\n",
-        "    for r in response.body[\"hits\"][\"hits\"]:\n",
-        "        dishes.append(r[\"_source\"])\n",
-        "\n",
-        "    print(f\"Response: {json.dumps(dishes, indent=2)}\")\n",
-        "except Exception as e:\n",
-        "    print(e)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "AAOwqHT8iEbl",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "AAOwqHT8iEbl",
         "outputId": "5ff04454-ae43-401c-d3fc-747c5d8bec7c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Response: [\n",
             "  {\n",
@@ -1050,6 +1014,28 @@
             "]\n"
           ]
         }
+      ],
+      "source": [
+        "try:\n",
+        "    response = es_client.search(\n",
+        "        index=\"lasticco-menu\",\n",
+        "        body={\n",
+        "            \"query\": {\n",
+        "                \"semantic\": {\n",
+        "                    \"field\": \"description\",\n",
+        "                    \"query\": \"may I have a carbonara with cream and bacon?\",\n",
+        "                }\n",
+        "            },\n",
+        "        },\n",
+        "    )\n",
+        "    dishes = []\n",
+        "\n",
+        "    for r in response.body[\"hits\"][\"hits\"]:\n",
+        "        dishes.append(r[\"_source\"])\n",
+        "\n",
+        "    print(f\"Response: {json.dumps(dishes, indent=2)}\")\n",
+        "except Exception as e:\n",
+        "    print(e)"
       ]
     },
     {
@@ -1067,17 +1053,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Pk0ttelOPTcj",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "id": "Pk0ttelOPTcj",
         "outputId": "55f6ede9-e15d-4353-99e5-f6f1d69f0478"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "What would you like to order? pasta with cheese\n",
             "Result: \n",
@@ -1229,9 +1215,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "Interrupted by user",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -1371,8 +1357,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "<ipython-input-101-ed0931a48b5f>:2: DeprecationWarning: Passing transport options in the API method is deprecated. Use 'Elasticsearch.options()' instead.\n",
             "  es_client.indices.delete(index=\"lasticco-menu\", ignore=[400, 404])\n",
@@ -1383,14 +1369,14 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "ObjectApiResponse({'acknowledged': True, 'pipelines': [], 'indexes': []})"
             ]
           },
+          "execution_count": 101,
           "metadata": {},
-          "execution_count": 101
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1404,5 +1390,19 @@
         "es_client.inference.delete_model(inference_id=\"elser-embeddings\", ignore=[400, 404])"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
